--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^2.6.12",
+    "echarts": "^5.2.2",
     "mockjs": "^1.1.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
