--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.24.0",
     "core-js": "^2.6.12",
     "echarts": "^5.2.2",
+    "js-cookie": "^3.0.1",
     "mockjs": "^1.1.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
